--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Klasik Yılan Oyunu</h1>
+        <h1>Deniz İlge Oyunu</h1>
         
         <div class="instructions">
             <p>Deniz İlge'yi yön tuşları ile kontrol edin. Sütleri toplayın ve büyüyün. Yağmurlar'dan uzak durun!</p>
